<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_main"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.vmpt.zakhar.koriakin.presentation.ui.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_game"
            app:destination="@id/gameFragment" />
        <action
            android:id="@+id/action_home_to_leaderboard"
            app:destination="@id/leaderboardFragment" />
    </fragment>

    <fragment
        android:id="@+id/gameFragment"
        android:name="com.vmpt.zakhar.koriakin.presentation.ui.GameFragment"
        android:label="@string/nav_game"
        tools:layout="@layout/fragment_game" />

    <fragment
        android:id="@+id/leaderboardFragment"
        android:name="com.vmpt.zakhar.koriakin.presentation.ui.LeaderboardFragment"
        android:label="@string/nav_leaderboard"
        tools:layout="@layout/fragment_leaderboard" />
</navigation>
